--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,5 @@
         "120",
         "--experimental"
     ],
-    "python.pythonPath": "${workspaceFolder}\\..\\venv\\Scripts\\python.exe",
+    "python.defaultInterpreterPath": "${workspaceFolder}\\..\\venv\\Scripts\\python.exe",
 }
